[gd_scene load_steps=18 format=3 uid="uid://com0xblx33ruv"]

[ext_resource type="Script" uid="uid://crdsu2iqk3aq7" path="res://Bosses/Scripts/boss.gd" id="1_p528m"]
[ext_resource type="AudioStream" uid="uid://c7inodpxlwv7b" path="res://Sounds/Monster death (Rpg).wav" id="2_can40"]
[ext_resource type="Texture2D" uid="uid://db8cp5m0h7d5d" path="res://Assets/Bosses/Agis/Agis.png" id="2_p528m"]
[ext_resource type="PackedScene" uid="uid://bgt7thfgw0ugh" path="res://GeneralNodes/HitBox/hit_box.tscn" id="2_rut0u"]
[ext_resource type="Script" uid="uid://ce1dtysyy0s8k" path="res://Bosses/Scripts/boss_state_machine.gd" id="4_ngsvx"]
[ext_resource type="Script" uid="uid://oeq4ggj8ooo1" path="res://Bosses/Scripts/boss_state_idle.gd" id="5_pssxw"]
[ext_resource type="Script" uid="uid://i0adne83pl04" path="res://Bosses/Scripts/boss_state_explosion.gd" id="6_xmlb5"]
[ext_resource type="PackedScene" uid="uid://dqgk83gboxhcn" path="res://Bosses/Entities/Explosion.tscn" id="7_uoxon"]
[ext_resource type="Script" uid="uid://cpml8tp7e0aen" path="res://Bosses/Scripts/boss_state_shoot.gd" id="8_uoxon"]
[ext_resource type="PackedScene" uid="uid://dncm0pksrjni0" path="res://Bosses/Entities/Projectile.tscn" id="9_32smj"]
[ext_resource type="Script" uid="uid://c54t0o2ajf7p2" path="res://Bosses/Scripts/boss_state_heal.gd" id="10_st865"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ngsvx"]
radius = 26.0
height = 146.0

[sub_resource type="Animation" id="Animation_p528m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_st865"]
resource_name = "heal"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.233333, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.403922, 0.796078, 0, 0.521569), Color(1, 1, 1, 1), Color(0.403922, 0.796078, 0, 0.521569), Color(1, 1, 1, 1), Color(0.403922, 0.796078, 0, 0.521569), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rut0u"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ngsvx"]
_data = {
&"RESET": SubResource("Animation_p528m"),
&"heal": SubResource("Animation_st865"),
&"idle": SubResource("Animation_rut0u")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_st865"]
radius = 300.0

[node name="Demon" type="CharacterBody2D" groups=["emenies"]]
y_sort_enabled = true
collision_layer = 272
collision_mask = 16
script = ExtResource("1_p528m")
boss_id = "demon"
boss_name = "Тень Кузницы"
boss_death_sound = ExtResource("2_can40")

[node name="HitBox" parent="." instance=ExtResource("2_rut0u")]
position = Vector2(-1, 73)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(2, -77)
shape = SubResource("CapsuleShape2D_ngsvx")
debug_color = Color(0.642995, 0.523066, 0.0296304, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, -46)
texture = ExtResource("2_p528m")
hframes = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ngsvx")
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(2, 16)
polygon = PackedVector2Array(-41, -22, -65, -35, -104, -67, -89, -127, -41, -137, -2, -175, 39, -136, 87, -121, 104, -70, 56, -33, 16, -13, 19, 44, -1, 51, -21, 42, -22, 1)

[node name="BossStateMachine" type="Node" parent="."]
script = ExtResource("4_ngsvx")
metadata/_custom_type_script = "uid://ce1dtysyy0s8k"

[node name="BossIdleState" type="Node" parent="BossStateMachine" node_paths=PackedStringArray("next_states")]
script = ExtResource("5_pssxw")
min_duration = 1.0
max_duration = 2.0
move_speed = 50.0
direction_change_interval = 3.0
next_states = [NodePath("../BossExplosionState"), NodePath("../BossExplosionState"), NodePath("../BossShootState"), NodePath("../BossHealState"), NodePath("../BossExplosionState"), NodePath("../BossExplosionState"), NodePath("../BossShootState")]
metadata/_custom_type_script = "uid://oeq4ggj8ooo1"

[node name="BossExplosionState" type="Node" parent="BossStateMachine"]
script = ExtResource("6_xmlb5")
explosion_charge_scene = ExtResource("7_uoxon")
spawn_count = 20
spawn_radius = 300.0
duration = 4.0
metadata/_custom_type_script = "uid://i0adne83pl04"

[node name="BossShootState" type="Node" parent="BossStateMachine"]
script = ExtResource("8_uoxon")
projectile_scene = ExtResource("9_32smj")
metadata/_custom_type_script = "uid://cpml8tp7e0aen"

[node name="BossHealState" type="Node" parent="BossStateMachine"]
script = ExtResource("10_st865")
metadata/_custom_type_script = "uid://c54t0o2ajf7p2"

[node name="Spawn1" type="Node2D" parent="."]
position = Vector2(-77, -99)

[node name="Spawn2" type="Node2D" parent="."]
position = Vector2(74, -95)

[node name="Spawn3" type="Node2D" parent="."]
position = Vector2(-91, -53)

[node name="Spawn4" type="Node2D" parent="."]
position = Vector2(89, -52)

[node name="BossHPHUD" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossHPHUD"]
shape = SubResource("CircleShape2D_st865")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
process_mode = 3
position = Vector2(3, -46)
scale = Vector2(11.5, 11.8)

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
